# dbconf/swagger3.yaml
@@ -205,6 +205,8 @@ paths:
       parameters:
         - in: query
           name: _id
+        - in: query
+          name: category
       responses:
         200:
           description: OK
@@ -232,6 +234,11 @@ paths:
           type: string
           required: false
           description: The file to upload.
+        - in: formData
+          name: category
+          type: string
+          required: false
+          description: The file to uploa
         - in: formData
           name: price
           type: Boolean
@@ -299,6 +306,11 @@ paths:
           type: file
           required: true
           description: The file to upload.
+        - in: formData
+          name: category
+          type: string
+          required: false
+          description: The file to uploa
         - in: formData
           name: title
           type: string
@@ -743,6 +755,116 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "gallery not found"
+  /category:
+    get:
+      tags:
+        - "category"
+      summary: Returns all category.
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: query
+          name: _id
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#'
+  /category/single:
+    get:
+      deprecated: true
+      tags:
+        - "category"
+      summary: "Find single category"
+      description: "Multiple status values can be provided with comma separated strings"
+      operationId: "finditemByData"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "query"
+          description: "categoryId"
+          required: true
+          type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#"
+        400:
+          description: "Invalid status value"
+    post:
+      tags:
+        - "category"
+      summary: "Add category in the store with form data"
+      description: ""
+      operationId: "updatePetWithForm"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "category object add"
+          required: true
+          schema:
+            $ref: "#/definitions/category"
+      responses:
+        405:
+          description: "Invalid input"
+    put:
+      tags:
+        - "category"
+      summary: "Updated category"
+      description: "This can only be done by the logged in category."
+      operationId: "updatecategory"
+      produces:
+        - "application/json"
+      consumes:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "query"
+          description: "category"
+          required: true
+          type: "string"
+        - in: "body"
+          name: "body"
+          description: "category object put"
+          required: true
+          schema:
+            $ref: "#/definitions/category"
+      responses:
+        400:
+          description: "Invalid category supplied"
+        404:
+          description: "category not found"
+    delete:
+      tags:
+        - "category"
+      summary: "Deletes a category"
+      description: ""
+      operationId: "delete category"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "query"
+          description: "delete - category - id"
+          required: true
+          type: "string"
+      responses:
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "category not found"
+
+
 definitions:
   Admin:
     type: "object"
@@ -766,7 +888,6 @@ definitions:
         type: "string"
         required: true
   Item:
-
     type: "object"
     properties:
       title:
@@ -802,6 +923,13 @@ definitions:
       maxPrice:
         type: "integer"
         format: "int32"
+  category:
+    type: "object"
+    properties:
+      name:
+        type: "string"
+      catId:
+        type: "string"
 
 securityDefinitions:
   basicAuth:
